stateDiagram-v2
    [*]-->IN_MENU: RESET
    IN_MENU --> CREATING_GAME: CREATE_LOBBY
    IN_MENU-->IN_MENU: SELECT
    CREATING_GAME --> IN_LOBBY: CREATE_LOBBY
    CREATING_GAME-->IN_MENU: ERROR
    IN_MENU --> GAME_JOIN: JOIN_GAME
    GAME_JOIN --> GAME_JOIN_PENDING: JOINING_GAME
    GAME_JOIN-->GAME_JOIN: ENTER_GAME_ID
    GAME_JOIN_PENDING --> IN_LOBBY: LOBBY_JOINED
    GAME_JOIN_PENDING --> GAME_JOIN: ERROR

note right of [*]
subscribe/request_accepted LOBBY_JOINED (#gameId)
#{selectedIndex=-1}
end note
note left of IN_MENU
#{selectedIndex} <= coalesce($index, #selectedIndex)
end note
note left of GAME_JOIN
#{gameId} <= coalesce($gameId, #gameId)
end note
note right of CREATING_GAME
#{gameId} <= $gameId
emit/lobby_created (#gameId)
end note
